plugins {
    id 'java'
}

group 'org.example'
version '1.0-SNAPSHOT'

apply plugin: 'java'
sourceCompatibility = 11
targetCompatibility = 11

repositories {
    mavenCentral()
}

dependencies {
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.20'

    testCompileOnly 'org.projectlombok:lombok:1.18.20'

    testImplementation 'com.google.inject:guice:5.0.1'
    testImplementation 'org.testng:testng:7.4.0'
    testImplementation 'com.squareup.retrofit2:retrofit:2.7.2'
    testImplementation 'com.squareup.retrofit2:converter-gson:2.7.2'
    testImplementation 'io.github.benas:random-beans:3.7.0'
}

test {
    testLogging.showStandardStreams = true
    outputs.upToDateWhen { false }
    useTestNG()
}

tasks.withType(JavaCompile).configureEach({
    options.forkOptions.jvmArgs.addAll( ['--add-opens', 'jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED'] )
})